# UE5PixelStreamingClient_Win

./: .gitattributes  CMakeLists.txt  README.md
.history/: .gitignore_20241202015306  .gitignore_20241202015522  CMakeLists_20241201134414.txt  CMakeLists_20241201134732.txt  CMakeLists_20241201134846.txt  CMakeLists_20241201134950.txt  CMakeLists_20241201135121.txt  CMakeLists_20241201135230.txt  CMakeLists_20241201135402.txt  CMakeLists_20241202001339.txt  CMakeLists_20241202002017.txt  CMakeLists_20241202002244.txt  CMakeLists_20241202002245.txt  CMakeLists_20241202010328.txt  CMakeLists_20241202011043.txt  CMakeLists_20241202011052.txt  CMakeLists_20241202011106.txt  CMakeLists_20241202011132.txt  CMakeLists_20241202012431.txt  CMakeLists_20241202013341.txt  CMakeLists_20241202013642.txt  CMakeLists_20241202013805.txt  CMakeLists_20241202014206.txt  CMakeLists_20241202014418.txt  CMakeLists_20241202015052.txt  README_20241202021242.md  README_20241202021524.md  README_20241202021838.md  README_20241202021845.md
.history/src/: PixelStreamingWebRTCIncludes_20241202001822.h  WebRTCIncludes_20241202001756.h  main_20241201134617.cpp  main_20241201134835.cpp  main_20241201134838.cpp  main_20241201134939.cpp  main_20241201135112.cpp  main_20241201135221.cpp  main_20241201135458.cpp  main_20241202001348.cpp  main_20241202001548.cpp  main_20241202001952.cpp  main_20241202005546.cpp  main_20241202005701.cpp  main_20241202014901.cpp
include/: audio_device_module.h  signaling_client.h  video_stream_configuration.h  webrtc_includes.h  webrtc_manager.h
src/: main.cpp  signaling_client.cpp  video_stream_configuration.cpp  webrtc_manager.cpp
